--- a/inference_Applio_NoUI.ipynb
+++ b/inference_Applio_NoUI.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "source": [
         "Last Update\n",
-        "12-05-2025"
+        "12-11-2025"
       ],
       "metadata": {
         "id": "xOSZlwBISpBr"
@@ -80,7 +80,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "#@title Load Model (ZIP, TAR.GZ, or Drive Link)\n",
         "Model_Name = \"\" #@param {type:\"string\"}\n",
         "MODEL_LINK = \"\" #@param {type:\"string\"}\n",
@@ -89,12 +88,10 @@
         "import os\n",
         "import glob\n",
         "import shutil\n",
-        "import tarfile # Import tarfile for signature check\n",
+        "import tarfile  # Import tarfile for signature check\n",
         "\n",
         "if not Model_Name:\n",
         "    print(\"❌ Error: Please enter the Model Name.\")\n",
-        "    # Optionally raise an error or exit if Model_Name is required\n",
-        "    # raise ValueError(\"Model Name cannot be empty\")\n",
         "else:\n",
         "    # Create model directory in target path\n",
         "    target_dir = f\"/content/Applio/logs/{Model_Name}\"\n",
@@ -108,17 +105,17 @@
         "            print(\"Downloading from Google Drive...\")\n",
         "            gdown.download(MODEL_LINK, downloaded_file_path, quiet=False, fuzzy=True)\n",
         "        elif MODEL_LINK.endswith(('.zip', '.tar.gz')):\n",
-        "             print(f\"Downloading from direct link ({MODEL_LINK})...\")\n",
-        "             os.system(f'wget -O {downloaded_file_path} \"{MODEL_LINK}\"')\n",
+        "            print(f\"Downloading from direct link ({MODEL_LINK})...\")\n",
+        "            os.system(f'wget -O {downloaded_file_path} \"{MODEL_LINK}\"')\n",
         "        else:\n",
-        "             print(\"❌ Error: Unsupported link type. Please provide a Google Drive link or a direct link to a .zip or .tar.gz file.\")\n",
-        "             downloaded_file_path = None # Indicate download failure\n",
+        "            print(\"❌ Error: Unsupported link type. Please provide a Google Drive link or a direct link to a .zip or .tar.gz file.\")\n",
+        "            downloaded_file_path = None  # Indicate download failure\n",
         "\n",
         "        if downloaded_file_path and os.path.exists(downloaded_file_path):\n",
-        "             print(\"✅ Download successful.\")\n",
+        "            print(\"✅ Download successful.\")\n",
         "        elif downloaded_file_path:\n",
-        "             print(\"❌ Error: Download failed or file not found after download attempt.\")\n",
-        "             downloaded_file_path = None\n",
+        "            print(\"❌ Error: Download failed or file not found after download attempt.\")\n",
+        "            downloaded_file_path = None\n",
         "\n",
         "    except Exception as e:\n",
         "        print(f\"❌ Error during download: {e}\")\n",
@@ -128,8 +125,8 @@
         "    if downloaded_file_path:\n",
         "        file_type = None\n",
         "        try:\n",
-        "            # Try identifying as tar.gz first (more specific signature often)\n",
-        "            with tarfile.open(downloaded_file_path, 'r:*') as tar: # r:* tries to auto-detect compression (gz, bz2, xz)\n",
+        "            # Try identifying as tar.gz first\n",
+        "            with tarfile.open(downloaded_file_path, 'r:*') as tar:  # auto-detect compression\n",
         "                file_type = 'tar'\n",
         "                print(\"Detected file type: tar archive\")\n",
         "                temp_extract_dir = \"/content/temp_extract\"\n",
@@ -148,33 +145,27 @@
         "                    with zipfile.ZipFile(downloaded_file_path, 'r') as zip_ref:\n",
         "                        zip_ref.extractall(target_dir)\n",
         "                else:\n",
-        "                     print(\"❌ Error: File is not a valid zip or tar archive.\")\n",
+        "                    print(\"❌ Error: File is not a valid zip or tar archive.\")\n",
         "            except Exception as zip_e:\n",
-        "                 print(f\"❌ Error processing as zip file: {zip_e}\")\n",
+        "                print(f\"❌ Error processing as zip file: {zip_e}\")\n",
         "\n",
         "        except Exception as e:\n",
-        "             print(f\"❌ Error during extraction detection/setup: {e}\")\n",
-        "\n",
+        "            print(f\"❌ Error during extraction detection/setup: {e}\")\n",
         "\n",
         "        # --- Copying/Moving files specifically for TAR archives ---\n",
         "        if file_type == 'tar':\n",
         "            files_copied = False\n",
-        "            # Search and copy required files using os.walk for flexibility\n",
+        "            # Search and copy required files using os.walk\n",
         "            for root, dirs, files in os.walk(temp_extract_dir):\n",
         "                for file in files:\n",
-        "                    # Copy the main model .pth file (assuming it's named Model_Name.pth)\n",
-        "                    # OR any .pth file NOT starting with G_ or D_\n",
         "                    if file.endswith('.pth'):\n",
-        "                         source_path = os.path.join(root, file)\n",
-        "                         # We prioritize the file named exactly Model_Name.pth if it exists\n",
-        "                         # Otherwise, we might take another .pth but need cleanup later\n",
-        "                         dest_path = os.path.join(target_dir, file)\n",
-        "                         shutil.copy2(source_path, dest_path)\n",
-        "                         print(f\"Copied PTH: {file} to {target_dir}\")\n",
-        "                         files_copied = True\n",
+        "                        source_path = os.path.join(root, file)\n",
+        "                        dest_path = os.path.join(target_dir, file)\n",
+        "                        shutil.copy2(source_path, dest_path)\n",
+        "                        print(f\"Copied PTH: {file} to {target_dir}\")\n",
+        "                        files_copied = True\n",
         "\n",
-        "                    # Copy relevant index file (usually starts with added_)\n",
-        "                    if file.endswith('.index'): # You might want to be more specific like file.startswith('added_')\n",
+        "                    if file.endswith('.index'):\n",
         "                        source_path = os.path.join(root, file)\n",
         "                        dest_path = os.path.join(target_dir, file)\n",
         "                        shutil.copy2(source_path, dest_path)\n",
@@ -182,13 +173,14 @@
         "                        files_copied = True\n",
         "\n",
         "            if not files_copied:\n",
-        "                 print(\"⚠️ Warning: No .pth or .index files found during deep search in extracted tar.\")\n",
+        "                print(\"⚠️ Warning: No .pth or .index files found during deep search in extracted tar.\")\n",
+        "\n",
         "            # Clean up temp extraction dir for tar\n",
         "            if os.path.exists(temp_extract_dir):\n",
         "                shutil.rmtree(temp_extract_dir)\n",
         "                print(f\"Removed temporary extraction directory: {temp_extract_dir}\")\n",
         "\n",
-        "        # --- Cleanup Extraneous PTH Files (Applied AFTER extraction for BOTH zip and tar) ---\n",
+        "        # --- Cleanup Extraneous PTH Files (for BOTH zip and tar) ---\n",
         "        print(\"\\n🧹 Starting cleanup of extraneous PTH files...\")\n",
         "        expected_model_pth_filename = f\"{Model_Name}.pth\"\n",
         "        expected_model_pth_full_path = os.path.join(target_dir, expected_model_pth_filename)\n",
@@ -211,20 +203,34 @@
         "            # Remove files starting with G_ or D_ OR any pth file if the expected one exists but this one isn't it\n",
         "            for pth_file_path in pth_files_in_target:\n",
         "                filename = os.path.basename(pth_file_path)\n",
-        "                # Remove G_ or D_ files unconditionally\n",
         "                if filename.startswith(\"G_\") or filename.startswith(\"D_\"):\n",
         "                    try:\n",
         "                        os.remove(pth_file_path)\n",
         "                        print(f\"🧹 Removed checkpoint file: {filename}\")\n",
         "                    except OSError as e:\n",
         "                        print(f\"❌ Error removing file {filename}: {e}\")\n",
-        "                # If the main expected file WAS found, remove any OTHER .pth file\n",
         "                elif found_expected_pth and pth_file_path != expected_model_pth_full_path:\n",
-        "                     try:\n",
+        "                    try:\n",
         "                        os.remove(pth_file_path)\n",
         "                        print(f\"🧹 Removed other PTH file (since expected exists): {filename}\")\n",
-        "                     except OSError as e:\n",
+        "                    except OSError as e:\n",
         "                        print(f\"❌ Error removing file {filename}: {e}\")\n",
+        "\n",
+        "        # 🔍 اینجا منطق پیشنهادی نام صحیح مدل را اضافه می‌کنیم\n",
+        "        final_pth_files = glob.glob(os.path.join(target_dir, \"*.pth\"))\n",
+        "        if final_pth_files:\n",
+        "            # اگر نام وارد شده باعث نشده فایل {Model_Name}.pth ساخته شود،\n",
+        "            # ولی یک یا چند pth دیگر هست، یکی را پیشنهاد بده\n",
+        "            if expected_model_pth_full_path not in final_pth_files:\n",
+        "                # ساده‌ترین حالت: از آخرین pth به‌عنوان نام صحیح استفاده کن\n",
+        "                suggested_full = sorted(final_pth_files)[-1]\n",
+        "                suggested_base = os.path.basename(suggested_full)\n",
+        "                suggested_name = os.path.splitext(suggested_base)[0]\n",
+        "\n",
+        "                print(\"\\n⚠️ توجه: به نظر می‌رسد نامی که برای مدل وارد کردید با نام واقعی فایل pth یکی نیست.\")\n",
+        "                print(f\"نام صحیح مدل بر اساس فایل موجود احتمالاً این است:\")\n",
+        "                print(f\"👉  {suggested_name}\")\n",
+        "                print(\"لطفاً همین نام را بدون پسوند در فیلد نام مدل وارد کنید تا سلول اینفرِنس درست کار کند.\")\n",
         "\n",
         "        # Final listing to confirm\n",
         "        print(f\"\\n✅ Extraction and cleanup complete for model '{Model_Name}'. Final contents:\")\n",
@@ -235,7 +241,7 @@
         "        print(f\"Removed downloaded archive: {downloaded_file_path}\")\n",
         "\n",
         "    else:\n",
-        "        print(\"Skipping extraction due to download failure.\")"
+        "        print(\"Skipping extraction due to download failure.\")\n"
       ],
       "metadata": {
         "cellView": "form",
