--- a/Applio_2025_RVC.ipynb
+++ b/Applio_2025_RVC.ipynb
@@ -451,11 +451,10 @@
       "cell_type": "markdown",
       "source": [
         "<p align=\"center\">\n",
-        "  <a href=\"https://colab.research.google.com/github/yaranbarzi/Applio/blob/main/Inference_2025.ipynb\" target=\"_blank\">\n",
+        "  <a href=\"https://colab.research.google.com/github/yaranbarzi/RVC/blob/main/inference_Applio_NoUI.ipynb\" target=\"_blank\">\n",
         "    <img src=\"https://img.shields.io/badge/Inference%20RVC-Open%20in%20Colab-F9AB00?style=for-the-badge&logo=googlecolab&logoColor=white\" alt=\"Inference RVC\"/>\n",
         "  </a>\n",
         "</p>\n",
-        "\n",
         "\n",
         "<p align=\"center\">\n",
         "  <a href=\"https://youtube.com/@aigolden\" target=\"_blank\">\n",
@@ -465,10 +464,22 @@
         "  <a href=\"https://t.me/ai_golden\" target=\"_blank\">\n",
         "    <img src=\"https://img.shields.io/badge/Telegram-ai__golden-26A5E4?style=for-the-badge&logo=telegram&logoColor=white\" alt=\"Telegram Channel\"/>\n",
         "  </a>\n",
+        "</p>\n",
+        "\n",
+        "<hr style=\"border: 1px solid #555; margin: 40px 0;\">\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "  <strong>برای تبدیل صدا به صدای خواننده دلخواه، طبق آموزش کامل این ویدیو پیش بروید </strong>\n",
+        "</p>\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "  <a href=\"https://youtu.be/rvfEFVZSt1E\" target=\"_blank\">\n",
+        "    <img src=\"https://img.shields.io/badge/AI%20Voice%20Changer-Watch%20Tutorial-FF0000?style=for-the-badge&logo=youtube&logoColor=white\" alt=\"AI Voice Changer Tutorial\"/>\n",
+        "  </a>\n",
         "</p>"
       ],
       "metadata": {
-        "id": "ZM-n4mJGBD4c"
+        "id": "d8a312sAIgR2"
       }
     }
   ],
